grafana_for_kubeflow.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: grafana
  namespace: monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: grafana
  template:
    metadata:
      labels:
        k8s-app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:7.3.5
          ports:
            - containerPort: 3000
              protocol: TCP
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /grafana/api/health
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 30
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /grafana/api/health
              port: 3000
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 256Mi
          volumeMounts:
            - name: grafana-configuration
              mountPath: "/etc/grafana/grafana.ini"
              subPath: grafana.ini
              readOnly: true
            - mountPath: /var/lib/grafana
              subPath: grafana
              name: storage
      volumes:
        - name: grafana-configuration
          configMap:
            name:  grafana-config
        - name: storage
          persistentVolumeClaim:
            claimName: grafana-pvc
---

kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: grafana
  name: grafana-service
  namespace: monitor
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    k8s-app: grafana
