prometheus.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: monitor
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      k8s-app: prometheus
  template:
    metadata:
      labels:
        k8s-app: prometheus
    spec:
      volumes:
        - name: prometheus
          configMap:
            name: prometheus-config
#      serviceAccountName: admin-user
      serviceAccountName: prometheus
      containers:
        - name: prometheus
          image: docker.io/prom/prometheus:v2.3.1
          volumeMounts:
            - name: prometheus
              mountPath: /etc/prometheus/
#          imagePullPolicy: Always
          ports:
            - containerPort: 9090
              protocol: TCP

---

kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: prometheus
  name: prometheus-service
  namespace: monitor
spec:
  ports:
    - port: 9090
      targetPort: 9090
      nodePort: 31112
  selector:
    k8s-app: prometheus
  type: NodePort
